syntax = "proto3";
package greet;

option go_package = "greet/greetpb";

message Greeting {
    string firstName = 1;
    string lastName = 2;
}

message GreetRequest {
    Greeting greeting = 1;
}

message GreetResponse {
    string result = 1;
}

message GreetStreamRequest {
    Greeting greeting = 1;
}

message GreetingResponseStream {
    string result = 1;
}

service GreetService {
    rpc Greet(GreetRequest) returns (GreetResponse) {};

    // Server Streaming
    rpc GreetStream(GreetStreamRequest) returns (stream GreetingResponseStream) {};
}